k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: live-stream
  labels:
    name: live-stream
